--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <p>this is a test example</p>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
