--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/images/ra-logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/use-on-light-bkgd.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stock Tracker</title>
+    <title>Turing Stock Tracker</title>
   </head>
   <body>
     <div id="root"></div>
